<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px_to_dip_96"
    android:background="@color/title_bg"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/action_bar_back"
        android:layout_width="@dimen/px_to_dip_28"
        android:layout_height="@dimen/px_to_dip_96"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/px_to_dip_8"
        android:background="@drawable/action_bar_icon"
        android:gravity="center_vertical|left" />

    <TextView
        android:id="@+id/action_bar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/action_bar_back"
        android:gravity="center_vertical|left"
        android:text="@string/action_bar_logo"
        android:textSize="@dimen/px_to_dip_80" />

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/px_to_dip_8"
        android:layout_toRightOf="@id/action_bar_logo"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textSize="@dimen/px_to_dip_35" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/px_to_dip_16" >

        <TextView
            android:id="@+id/action_bar_right_three"
            android:layout_width="@dimen/px_to_dip_110"
            android:layout_height="@dimen/px_to_dip_54"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/px_to_dip_32"
            android:visibility="gone" />

        <TextView
            android:id="@+id/action_bar_right_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/action_bar_right_three"
            android:text="@string/action_bar_search"
            android:textSize="@dimen/px_to_dip_80"
            android:visibility="gone" />

        <TextView
            android:id="@+id/action_bar_right_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/action_bar_right_two"
            android:text="@string/action_bar_more"
            android:textSize="@dimen/px_to_dip_80"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>