<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px_to_dip_96"
    android:background="@color/title_bg"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/action_bar_left_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_to_dip_96" >

        <ImageView
            android:id="@+id/action_bar_back"
            android:layout_width="@dimen/px_to_dip_28"
            android:layout_height="@dimen/px_to_dip_96"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_to_dip_8"
            android:background="@drawable/action_bar_icon"
            android:contentDescription="@string/content_description"
            android:gravity="center_vertical|left" />

        <RelativeLayout
            android:id="@+id/action_bar_layout"
            android:layout_width="@dimen/px_to_dip_80"
            android:layout_height="@dimen/px_to_dip_96"
            android:layout_toRightOf="@id/action_bar_back" >

            <ImageView
                android:id="@+id/action_bar_logo"
                android:layout_width="@dimen/px_to_dip_60"
                android:layout_height="@dimen/px_to_dip_60"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/action_bar_logo" >
            </ImageView>

            <TextView
                android:id="@+id/action_bar_new_message"
                android:layout_width="@dimen/px_to_dip_42"
                android:layout_height="@dimen/px_to_dip_42"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/px_to_dip_16"
                android:background="@drawable/rc_new_message"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/px_to_dip_28"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="@dimen/px_to_dip_500"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_to_dip_8"
            android:layout_toRightOf="@id/action_bar_layout"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textSize="@dimen/px_to_dip_36" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/px_to_dip_16" >

        <TextView
            android:id="@+id/action_bar_right_three"
            android:layout_width="@dimen/px_to_dip_110"
            android:layout_height="@dimen/px_to_dip_54"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:textSize="@dimen/px_to_dip_32"
            android:visibility="gone" />

        <TextView
            android:id="@+id/action_bar_right_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_toRightOf="@id/action_bar_right_three"
            android:text="@string/action_bar_search"
            android:visibility="gone" />

        <TextView
            android:id="@+id/action_bar_right_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_to_dip_10"
            android:background="@drawable/rong_action_bar_more"
            android:layout_toRightOf="@id/action_bar_right_two"
            android:gravity="center_vertical|center_horizontal"
            android:padding="@dimen/px_to_dip_8"
            android:textSize="@dimen/px_to_dip_30"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>